# crewai-teacher-assistant

./: .gitignore  README.md  lesson_plan.md  parsed_notes.json  pyproject.toml  quiz.md  suggestions.md
knowledge/: lesson_notes_english.txt  lesson_notes_math.txt  lesson_notes_music.txt
src/teacher_assistant/: crew.py  main.py
src/teacher_assistant/config/: agents.yaml  tasks.yaml
