[project]
name = "teacher_assistant"
version = "0.1.0"
description = "teacher-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
teacher_assistant = "teacher_assistant.main:run"
run_crew = "teacher_assistant.main:run"
train = "teacher_assistant.main:train"
replay = "teacher_assistant.main:replay"
test = "teacher_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
